Grid alignment has been fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -225,6 +225,7 @@ a:hover {
         /* this forces my grid to have 2 columns with 240px */
         /* grid-template-columns: 240px 240px; */
         grid-template-columns: repeat(2, 240px);
+        justify-content: center;
     }
 }
 
@@ -240,9 +241,19 @@ a:hover {
     }
 }
 
+.project .grid a {
+    color: black;
+}
+
 .flip-card {
-    height: 180px;
+    height: 130px;
     perspective: 1000px;
+}
+
+@media (min-width: 560px) {
+    .flip-card {
+        height: 180px;
+    }
 }
 
 .card {
@@ -269,11 +280,17 @@ a:hover {
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, .7);
-    height: 180px;
+    height: 130px;
     width: 100%;
     /* default value is inverted and when the `.card` is hovered,
        then it changes */
     transform: rotateY(180deg);
+}
+
+@media (min-width: 560px) {
+    .card-back {
+        height: 180px;
+    }
 }
 
 .project figure {
@@ -281,14 +298,21 @@ a:hover {
 }
 
 .img-project {
-    height: 180px;
-    width: 100%;
+    height: 130px;
+    /* width: 100%; */
     /* this forces the image fits inside the passed height/width  */
-    object-fit: cover;
+    object-fit: contain;
     /* this indicates how the image should fit */
-    object-position: left bottom;
+    object-position: center;
     /* time to a transition (e.g. hover) */
-    transition: transform 500ms;
+    /* transition: transform 500ms; */
+}
+
+@media (min-width: 560px) {
+    .img-project {
+        height: 180px;
+        width: 100%;
+    }
 }
 
 /* .img-project:hover {
